--- a/project.Rmd
+++ b/project.Rmd
@@ -63,7 +63,7 @@ saturated_soil <- tibble(
   d18O_surface = 0, #permil
   
   #Soil boundary conditions
-  E = 10E-8, #m/sec
+  E = 10E-9, #m/sec - this is just under 1 mm / day (0.864 mm/ day)
   p = 0.3, # porosity, unitless
   tau = 0.67, #toruosity, unitless
   theta = 0.3, #volumetric water content unitless
@@ -87,19 +87,11 @@ Question: Picarro water isotope analyzers (like those you might find in IsoLab i
 ## Water concentration curve:
 Let's inspect a soil, with a water concentration profile that looks like this: 
 ```{r inset}
-upper_section <- tibble (
-  z = seq (0,0.05, by = 0.001),
-  theta = 0.05
+water_C <- tibble (
+  z = seq (0,1, by = 0.001),
+  theta = ifelse(z<=0.05, 0.05, (z+0.9)/19)
 )
-
-
-lower_section <-  tibble(
-  z = seq (.051, 1, by=0.001),
-  theta = (z+0.9)/19
-)
-
-water_C <- bind_rows(upper_section, lower_section)
-
+  
 water_C %>% ggplot () + aes(x = theta, y = z) %>% geom_line()+scale_y_reverse()+scale_x_continuous(limits = c(0,.1))
 ```
 
@@ -184,7 +176,6 @@ temp.K = 293.15
 
 
 ```{r}
-
 vt_region <-  tibble(
   #the basics: 
   z = seq(0,.1, by = .001), #m
@@ -205,20 +196,21 @@ vt_region <-  tibble(
   d18O_a = -14, #permil
   
   #Soil boundary conditions
-  E = 10E-10, #m/sec
+  E = 10E-9, #m/sec
   p = 0.3, # porosity, unitless
   tau = 0.67, #toruosity, unitless
-  theta = 0.3, #volumetric water content unitless
+  theta = ifelse(z<=0.05, 0.05, (z+0.9)/19), #changes through the profile 
   N_sat = 0.017, #kg/m^2
   D = 1.5E-9, #m^2 / sec from Barnes and Allison, 1988
   D_v = 2.42E-5,
   f = tau*theta,
   D_star = f*D,  #m^2 / sec
+  
+  #liquid diffusion length scale 
   z_l = D_star/E, #m
   
-
   #relative humidity: 
-  h_a = 0.25, 
+  h_a = 0.2, 
   
   # water concentration: 
   theta_bar = 0.065,
@@ -242,9 +234,6 @@ vt_region %>% ggplot () + aes (x = d18O, y = z) + geom_line() + scale_y_reverse(
 ```
 
 
-
-
-
 ## liquid transport zone: 
 
 $$
@@ -254,10 +243,53 @@ z_v = \frac{\alpha_{eq}*\alpha_{kin}*D^*N_{sat}}{E\rho}  \\
 
 $$
 
+```{r}
+lt_region <- tibble (
+  z = seq (0, 1, by=0.001),
+  temp = 20, #°C
+  temp.K = temp + 273.15,
+  rho = 997, #kg/m^3
+  
+  #fractionation factors:
+  R = 8.314, #J/mol-K
+  epsilon_d18O_eq = -7.685+6.7123*(1E3/temp.K)-1.6664*(1E6/temp.K^2)+0.35041*(1E9/temp.K^3),
+  alpha_eq = exp(epsilon_d18O_eq/1000),
+  alpha_kin = 0.975, 
+  epsilon_kin = -25, #permil
+  
+  #isotope boundary conditions: 
+  d18O_res = -4, #permil
+  d180_surface = 0, #permil
+  d18O_a = -14, #permil
+
+  #Soil boundary conditions
+  E = 10E-10, #m/sec
+  p = 0.3, # porosity, unitless
+  tau = 0.67, #toruosity, unitless
+  theta = ifelse(z<=0.05, 0.05, (z+0.9)/19), #changes through the profile
+  N_sat = 0.017, #kg/m^2
+  D = 1.5E-9, #m^2 / sec from Barnes and Allison, 1988
+  D_v = 2.42E-5,
+  f = tau*theta,
+  D_star = f*D,  #m^2 / sec
+  
+  #length scales
+  z_l = D_star/E, #m
+  z_v = (alpha_eq*alpha_kin*D_star*N_sat)/(E*rho)
+  
+  
+  #d18O_ltr <- d18O_res + ()
+)
+  
+
+lt_region %>% ggplot() + aes (x=theta, y = z) + geom_line () + scale_y_reverse()
+```
+
 
 
 ```{r}
-
+z <- seq(0, 1, by = 0.001)
+theta <- ifelse(z<=0.05, 0.05, (z+0.9)/19)
 ```
 
 
